# comfystream

./: .dockerignore  .gitignore  MANIFEST.in  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.base  README.md  devcontainer.json  extra_model_paths.yaml  post-create.sh
app/: init_or_start.sh
configs/: models.yaml  nodes.yaml
scripts/: README.md  create_sd15_tensorrt_engines.sh  find_tensorrt_models.sh  setup_nodes.py  test_tensorrt_build.sh  test_tensorrt_workflow.sh
server/: app.py  pipeline.py
src/comfystream/: __init__.py  client.py
src/comfystream/configs/: __init__.py
src/comfystream/scripts/: build_sd15_tensorrt_engines.sh  build_trt.py  build_trt_2.py  setup_models.py  setup_nodes.py
tests/: test_installation.py
workflows/: dreamshaper.json
workflows/build_tensorrt_api_workflows/: build_onnx_api.json  build_tensorrt_api.json
